# performance_profiling

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  estimate_best_chunk_size_for_file_read.cpp  estimate_best_chunk_size_for_file_read_visualize_results.py  estimate_cache_size_and_bandwidth.cpp  estimate_cache_size_and_bandwidth_visualize_results.py  estimate_cpu_freq.cpp  haversine_generator.cpp  haversine_parser.cpp  main.cpp  microbench_alignment.cpp  microbench_basic.cpp  microbench_branches.cpp  microbench_execution_ports.cpp  microbench_rat.cpp  microbench_simd.cpp  page_fault_probing.cpp  pairs.json  rat_emulator.cpp  repetition_testing.cpp  sandbox.cpp
assembly/: conditional_nop_loops.asm  estimate_cache_size_and_bandwith.asm  execution_ports.asm  jump_allignment.asm  multinop_loops.asm  nop_loop.asm  nop_loops.asm  rat.asm  simd.asm
cmake_local/: PerfAppClangFlags.cmake  PerfAppDefaultFlags.cmake  PerfAppGCCFlags.cmake  PerfAppMSVCFlags.cmake
include/: core_init.h  haversine.h  haversine_distance.h  init_core.h  json_serializer.h  os_metrics.h  pair.h  platform.h  profile_context.h  profiler.h  repetition_tester.h  slow_json_decoder.h  utils.h
src/: core_init.cpp  haversine.cpp  haversine_distance.cpp  init_core.cpp  json_serializer.cpp  profiler.cpp  repetition_tester.cpp  unix_os_metrics.cpp  unix_platform.cpp  utils.cpp  win_os_metrics.cpp  win_platform.cpp
